Added automatic generation, improvement of the algorithm, removed some bugs.