@@ -1,12 +1,9 @@
 package algorithm;
 
-import model.Task;
 import model.wrapper.Instance;
 
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class AntColonyAlgorithm {
 
@@ -15,7 +12,6 @@ public class AntColonyAlgorithm {
 	private final int antPopulation;
 	private final Instance instance;
 	private final int solutionPersistenceAmount;
-	private final List<Instance> bestPaths;
 
 	public AntColonyAlgorithm(final int iterations, final int antPopulation, final double evaporationRatio,
 							  final Instance instance, final int solutionPersistenceAmount) {
@@ -23,40 +19,44 @@ public class AntColonyAlgorithm {
 		this.antPopulation = antPopulation;
 		this.instance = instance;
 		this.solutionPersistenceAmount = solutionPersistenceAmount;
-		this.bestPaths = new ArrayList<>(iterations);
 		this.pheromoneMatrix = new PheromoneMatrix(instance.getTasks().size(), evaporationRatio);
 	}
 
 	public Instance run() {
-		makeIteration(0);
-		int initialSchedulingTime = bestPaths.get(0).getInitialSchedulingTime();
+		Instance bestPath = makeIteration(0);
+		int initialSchedulingTime = bestPath.getQuality();
+
 		for (int iteration = 1; iteration < iterations; iteration++) {
-			makeIteration(iteration);
+			Instance result = makeIteration(iteration);
+			if (result.getQuality() < bestPath.getQuality()) {
+				bestPath = result;
+			}
 		}
-		bestPaths.sort(Comparator.comparingInt(Instance::getQuality));
-		Instance instance = bestPaths.get(0);
-		instance.setInitialSchedulingTime(initialSchedulingTime);
-		return instance;
+		bestPath.setInitialSchedulingTime(initialSchedulingTime);
+		bestPath.getTasks().sort(Comparator.comparing(t -> t.getFirst().getBegin()));
+		return bestPath;
 	}
 
-	private void makeIteration(int iterationNumber) {
-
-		double independenceRatio = 100 - (iterationNumber / iterations);
-		ConcurrentHashMap<Integer, Instance> results = new ConcurrentHashMap<>(antPopulation);
+	private Instance makeIteration(int iterationNumber) {
+		double independenceRatio = 100 * (1 - iterationNumber / (double) iterations);
+		Map<Integer, Instance> results = new HashMap<>(antPopulation);
 		for (int i = 0; i < antPopulation; i++) {
-			Ant ant = new Ant();
-			Instance instance = ant
-					.prepareAntPath(independenceRatio, this.instance.getTasks(), this.instance.getMaintenances(),
-							pheromoneMatrix);
-			results.put(i, instance);
+			Instance result = expeditionsAntOnAJourney(independenceRatio);
+			results.put(i, result);
 		}
-
 		List<Instance> firstFivePaths = results.values().stream()
-				.sorted(Comparator.comparingInt(Instance::getCurrentSchedulingTime)).limit(solutionPersistenceAmount)
-				.collect(
-						Collectors.toList());
+				.sorted(Comparator.comparingInt(Instance::getQuality)).limit(solutionPersistenceAmount)
+				.collect(Collectors.toList());
 		firstFivePaths.forEach(t -> pheromoneMatrix.updateMatrix(t.getTasks()));
-		bestPaths.add(firstFivePaths.get(0));
+
+		Instance bestResult = firstFivePaths.get(0);
 		pheromoneMatrix.evaporateMatrix();
+
+		return bestResult;
+	}
+
+	private Instance expeditionsAntOnAJourney(double independenceRatio) {
+		return new Ant() //i don't care about it <3
+				.prepareAntPath(independenceRatio, instance.getTasks(), instance.getMaintenances(), pheromoneMatrix);
 	}
 }
